--- a/PL/Product.xaml
+++ b/PL/Product.xaml
@@ -7,6 +7,17 @@
         mc:Ignorable="d"
         Title="Product" Height="450" Width="640">
     <Grid >
-       
+        <Button Content="submit product"  HorizontalAlignment="Left" Margin="295,320,0,0" Padding="5" VerticalAlignment="Top" x:Name="submitProduct" Click="submitProduct_Click"/>
+        <ComboBox HorizontalAlignment="Left" Margin="311,217,0,0" VerticalAlignment="Top" Width="120" x:Name="CategorySelector"/>
+        <Label Content="in stock" HorizontalAlignment="Left" Margin="219,161,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="311,174,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" x:Name="inStock"/>
+        <Label Content="id" HorizontalAlignment="Left" Margin="219,104,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.064,0.9"/>
+        <TextBox HorizontalAlignment="Left" Margin="311,130,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" x:Name="name"/>
+        <Label Content="name" HorizontalAlignment="Left" Margin="219,135,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.548,-1.063"/>
+        <TextBox HorizontalAlignment="Left" Margin="311,104,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" Height="13" x:Name="id"/>
+        <Label Content="category" HorizontalAlignment="Left" Margin="219,215,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="311,258,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" x:Name="price"/>
+        <Label Content="price" HorizontalAlignment="Left" Margin="219,258,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
