--- a/PL/ProducttListWindow.xaml
+++ b/PL/ProducttListWindow.xaml
@@ -15,20 +15,18 @@
             </ListView.View>
         </ListView>
         <Grid Name="UpGrid" Height="auto" Grid.Row="2" Width="auto">
-            <Button Content="Add new Product" Grid.Row="2" HorizontalAlignment="Right" Margin="5" Padding="5" x:Name="addNewProduct"/>
+           
             <Grid.ColumnDefinitions>
-
-
                 <ColumnDefinition Width="379*"/>
-                <!--<Label Grid.Column="0"></Label>
-                    <ComboBox Name="CategorySelector" HorizontalAlignment= "Stretch"VerticalAlignment="Stretch"Grid.Column="1" />-->
-              
                 <ColumnDefinition Width="21*"/>
                 <ColumnDefinition Width="77*"/>
                 <ColumnDefinition Width="323*"/>
             </Grid.ColumnDefinitions >
+            <Label Grid.Column="0">סינון לפי קטגוריה</Label>
+            <ComboBox x:Name="CategorySelector" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,10,10"/>
+            <Button Content="Add new Product" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Margin="5" Padding="5" x:Name="addNewProduct"/>
         </Grid>
-       
+
 
         <Grid.RowDefinitions>
             <RowDefinition Height="40*"/>
