--- a/PL/ProducttListWindow.xaml
+++ b/PL/ProducttListWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PL.ProductList"
+﻿<Window x:Class="PL.ProductListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="ProductList" Height="450" Width="800">
     <Grid Name="MainGrid">
-        <ListView Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}"  x:Name="ProductListView">
+        <!--d:ItemsSource="{d:SampleData ItemCount=5}"-->
+        <ListView Grid.Row="1"  x:Name="ProductListView">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -23,8 +24,8 @@
                 <ColumnDefinition Width="323*"/>
             </Grid.ColumnDefinitions >
             <Label Grid.Column="0">סינון לפי קטגוריה</Label>
-            <ComboBox x:Name="CategorySelector" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,10,10"/>
-            <Button Content="Add new Product" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Margin="5" Padding="5" x:Name="addNewProduct"/>
+            <ComboBox x:Name="CategorySelector" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,10,10" SelectionChanged="CategorySelector_SelectionChanged"/>
+            <Button Content="Add new Product" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Margin="5" Padding="5" x:Name="addNewProduct" Click="addNewProduct_Click"/>
         </Grid>
 
 
