--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="ProductViewList" Click="ProductViewList_Click">להצגת מוצרים</Button>
+        <Button x:Name="ProductViewList" Width="150" Height="100"   Click="ProductViewList_Click">להצגת מוצרים</Button>
     </Grid>
 </Window>
