--- a/PL/Orders/Order.xaml
+++ b/PL/Orders/Order.xaml
@@ -26,7 +26,7 @@
         <Label Content="שם לקוח" HorizontalAlignment="Left" Margin="383,57,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
         <TextBox x:Name="status" HorizontalAlignment="Left" Margin="159,246,0,0" TextWrapping="Wrap" Text="סטטוס" VerticalAlignment="Top" Width="120"/>
         <Label Content="סטטוס" HorizontalAlignment="Left" Margin="394,240,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.654,-0.054"/>
-        <TextBox HorizontalAlignment="Left" Margin="159,284,0,0" TextWrapping="Wrap" Text="מחיר" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="159,284,0,0" TextWrapping="Wrap" Text="מחיר" VerticalAlignment="Top" Width="120"/>
         <Label Content="מחיר סופי" HorizontalAlignment="Left" Margin="384,275,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="159,152,0,0" TextWrapping="Wrap" Text="ביצוע" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך ביצוע הזמנה" HorizontalAlignment="Left" Margin="335,150,0,0" VerticalAlignment="Top"/>
