continue bl linq changing 01.01.2023

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="btn" TargetType="Button">
+            <Setter Property="BorderBrush" Value="Black"/>
+        </Style>    
     </Application.Resources>
 </Application>
