--- a/PL/Orders/Order.xaml
+++ b/PL/Orders/Order.xaml
@@ -16,23 +16,23 @@
             <RowDefinition Height="57*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="159,30,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="159,30,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
         <Label Content="ת.ז" HorizontalAlignment="Left" Margin="384,26,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="159,127,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="159,127,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="אימייל לקוח" HorizontalAlignment="Left" Margin="375,119,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" Margin="159,96,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" Margin="159,96,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="כתובת לקוח" HorizontalAlignment="Left" Margin="375,88,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerName" HorizontalAlignment="Left" Margin="159,61,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerName" HorizontalAlignment="Left" Margin="159,61,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="שם לקוח" HorizontalAlignment="Left" Margin="383,57,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="159,246,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="159,246,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="סטטוס" HorizontalAlignment="Left" Margin="394,240,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.654,-0.054"/>
-        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="159,284,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="159,284,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="מחיר סופי" HorizontalAlignment="Left" Margin="384,275,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="159,152,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="159,152,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך ביצוע הזמנה" HorizontalAlignment="Left" Margin="335,150,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="sentDate" HorizontalAlignment="Left" Margin="159,182,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="sentDate" HorizontalAlignment="Left" Margin="159,182,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך שליחת הזמנה" HorizontalAlignment="Left" Margin="335,178,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="recievedDate" HorizontalAlignment="Left" Margin="159,213,0,0" TextWrapping="Wrap" Text="{Binding Path=}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="recievedDate" HorizontalAlignment="Left" Margin="159,213,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך קבלת הזמנה" HorizontalAlignment="Left" Margin="335,209,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
         <ListView ItemsSource="{Binding}" Margin="508,2,24,245">
             <ListView.View>
