pl - binding conttinue pages

--- a/PL/Orders/OrderListWindow.xaml
+++ b/PL/Orders/OrderListWindow.xaml
@@ -15,7 +15,7 @@
             <ColumnDefinition Width="422*"/>
             <ColumnDefinition Width="327*"/>
         </Grid.ColumnDefinitions>
-        <ListView x:Name="OrderListView" Grid.ColumnSpan="4" ItemsSource="{Binding}">
+        <ListView x:Name="OrderListView" Grid.ColumnSpan="4" ItemsSource="{Binding}" SelectionChanged="OrderListView_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
