--- a/PL/Orders/Order.xaml
+++ b/PL/Orders/Order.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="Order" Height="450" Width="800">
+        Title="Order" Height="450" Width="800"
+      DataContext="{Binding Path=order, RelativeSource={RelativeSource self}}">
     <Grid Margin="0,10,-258,-276">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="77*"/>
@@ -16,31 +17,25 @@
             <RowDefinition Height="57*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="159,30,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="id" HorizontalAlignment="Left" Margin="159,30,0,0" TextWrapping="Wrap" Text="{Binding ID}" VerticalAlignment="Top" Width="120"/>
         <Label Content="ת.ז" HorizontalAlignment="Left" Margin="384,26,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="159,127,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerEmail" HorizontalAlignment="Left" Margin="159,127,0,0" TextWrapping="Wrap" Text="{Binding CustomerEmail}" VerticalAlignment="Top" Width="120"/>
         <Label Content="אימייל לקוח" HorizontalAlignment="Left" Margin="375,119,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" Margin="159,96,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerAdress" HorizontalAlignment="Left" Margin="159,96,0,0" TextWrapping="Wrap" Text="{Binding CustomerAdress}" VerticalAlignment="Top" Width="120"/>
         <Label Content="כתובת לקוח" HorizontalAlignment="Left" Margin="375,88,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="customerName" HorizontalAlignment="Left" Margin="159,61,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="customerName" HorizontalAlignment="Left" Margin="159,61,0,0" TextWrapping="Wrap" Text="{Binding CustomerName }" VerticalAlignment="Top" Width="120"/>
         <Label Content="שם לקוח" HorizontalAlignment="Left" Margin="383,57,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="159,246,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="status" HorizontalAlignment="Left" Margin="159,246,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120"/>
         <Label Content="סטטוס" HorizontalAlignment="Left" Margin="394,240,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.654,-0.054"/>
-        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="159,284,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox  x:Name="totalPrice" HorizontalAlignment="Left" Margin="159,284,0,0" TextWrapping="Wrap" Text="{Binding TotalPrice}" VerticalAlignment="Top" Width="120"/>
         <Label Content="מחיר סופי" HorizontalAlignment="Left" Margin="384,275,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="159,152,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="paymentDate" HorizontalAlignment="Left" Margin="159,152,0,0" TextWrapping="Wrap" Text="{Binding PaymentDate}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך ביצוע הזמנה" HorizontalAlignment="Left" Margin="335,150,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="sentDate" HorizontalAlignment="Left" Margin="159,182,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="sentDate" HorizontalAlignment="Left" Margin="159,182,0,0" TextWrapping="Wrap" Text="{Binding ShipDate}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך שליחת הזמנה" HorizontalAlignment="Left" Margin="335,178,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="recievedDate" HorizontalAlignment="Left" Margin="159,213,0,0" TextWrapping="Wrap" Text="{}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="recievedDate" HorizontalAlignment="Left" Margin="159,213,0,0" TextWrapping="Wrap" Text="{Binding DeliveryDate}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך קבלת הזמנה" HorizontalAlignment="Left" Margin="335,209,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <ListView ItemsSource="{Binding}" Margin="508,2,24,245">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn/>
-                </GridView>
-            </ListView.View>
-        </ListView>
+     
     </Grid>
 </Window>
 
