--- a/PL/Products/ProductsCatalog.xaml
+++ b/PL/Products/ProductsCatalog.xaml
@@ -11,14 +11,15 @@
     <Grid>
         <ComboBox x:Name="categorySelector" HorizontalAlignment="Left" Margin="506,10,0,0" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="categorylbl" Content="Category" HorizontalAlignment="Left" Margin="155,10,0,0" VerticalAlignment="Top"/>
-        <ListView x:Name="productsCatalogList" d:ItemsSource="{Binding}" Margin="10,86,0,0">
+       
+        <Button  x:Name="orderSubmit" Content="אישור הזמנה" HorizontalAlignment="Left" Margin="281,344,0,0" VerticalAlignment="Top" Click="orderSubmit_Click"/>
+        <ListView  x:Name="productsCatalogList" ItemsSource="{Binding}" Margin="89,63,156,135" SelectionChanged="ListView_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button  x:Name="orderSubmit" Content="אישור הזמנה" HorizontalAlignment="Left" Margin="281,344,0,0" VerticalAlignment="Top" Click="orderSubmit_Click"/>
 
     </Grid>
 </Window>
