--- a/PL/Orders/TrackOrderWindow.xaml
+++ b/PL/Orders/TrackOrderWindow.xaml
@@ -13,7 +13,7 @@
         <Label Content="קוד מעקב הזמנה" HorizontalAlignment="Left" Margin="445,41,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="status" HorizontalAlignment="Left" Margin="260,72,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120"/>
         <Label Content="סטטוס הזמנה" HorizontalAlignment="Left" Margin="460,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <ListView d:ItemsSource="{Binding}" Margin="21,126,21,38">
+        <ListView ItemsSource="{Binding}" Margin="21,126,21,38">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
