--- a/PL/Products/ProducttListWindow.xaml
+++ b/PL/Products/ProducttListWindow.xaml
@@ -30,7 +30,7 @@
                 <ColumnDefinition Width="323*"/>
             </Grid.ColumnDefinitions >
             <Label Grid.Column="0">סינון לפי קטגוריה</Label>
-            <ComboBox x:Name="CategorySelector" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,10,10" SelectionChanged="CategorySelector_SelectionChanged" Text="choose category"/>
+            <ComboBox x:Name="categorySelector" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,10,10" SelectionChanged="categorySelector_SelectionChanged" Text="choose category"/>
             <Button Content="Add new Product" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Margin="5" Padding="5" x:Name="addNewProduct" Click="addNewProduct_Click"/>
         </Grid>
        
