--- a/PL/Orders/TrackOrderWindow.xaml
+++ b/PL/Orders/TrackOrderWindow.xaml
@@ -13,12 +13,13 @@
         <Label Content="קוד מעקב הזמנה" HorizontalAlignment="Left" Margin="445,41,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="status" HorizontalAlignment="Left" Margin="260,72,0,0" TextWrapping="Wrap" Text="{Binding Status}" VerticalAlignment="Top" Width="120"/>
         <Label Content="סטטוס הזמנה" HorizontalAlignment="Left" Margin="460,72,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <ListView ItemsSource="{Binding}" Margin="21,126,21,38">
+        <ListView ItemsSource="{Binding Tracking}" Margin="21,126,21,38" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button x:Name="ShowOrderDetails"   Content="לצפיה בפרטי ההזמנה" HorizontalAlignment="Left" Margin="90,39,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.298,0.483" Height="28" Width="52" Click="ShowOrderDetails_Click"/>
     </Grid>
 </Window>
