--- a/PL/Orders/Order.xaml
+++ b/PL/Orders/Order.xaml
@@ -35,7 +35,7 @@
         <Label Content="תאריך שליחת הזמנה" HorizontalAlignment="Left" Margin="335,178,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="recievedDate" HorizontalAlignment="Left" Margin="159,213,0,0" TextWrapping="Wrap" Text="{Binding DeliveryDate}" VerticalAlignment="Top" Width="120"/>
         <Label Content="תאריך קבלת הזמנה" HorizontalAlignment="Left" Margin="335,209,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"></Label>
-        <ListView x:Name="orderItemsList" ItemsSource="{Binding Items}" Margin="7,205,236,141" Grid.ColumnSpan="2">
+        <ListView x:Name="orderItemsList" ItemsSource="{Binding Items}" Margin="7,205,10,183">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
