--- a/PL/Orders/OrderListWindow.xaml
+++ b/PL/Orders/OrderListWindow.xaml
@@ -21,6 +21,8 @@
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
-        </ListView>
+       </ListView>
+        <Image HorizontalAlignment="Left" Height="151" Margin="34,302,0,0" VerticalAlignment="Top" Width="421" Source="/1111.jpg"/>
+
     </Grid>
 </Window>
