--- a/PL/Products/ProducttListWindow.xaml
+++ b/PL/Products/ProducttListWindow.xaml
@@ -13,11 +13,11 @@
             <RowDefinition Height="500*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
+
         <ListView Grid.Row="1"  x:Name="ProductListView" SelectionChanged="ProductListView_SelectionChanged" ItemsSource="{Binding}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn/> 
+                    <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
@@ -29,10 +29,11 @@
                 <ColumnDefinition Width="77*"/>
                 <ColumnDefinition Width="323*"/>
             </Grid.ColumnDefinitions >
-            <Label Grid.Column="0">סינון לפי קטגוריה</Label>
-            <ComboBox x:Name="categorySelector" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,10,10" SelectionChanged="categorySelector_SelectionChanged" Text="choose category"/>
-            <Button Content="Add new Product" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Right" Margin="5" Padding="5" x:Name="addNewProduct" Click="addNewProduct_Click"/>
+            <Label Grid.Column="0" FontWeight="Bold"  FontSize="19" Margin="0,10,194,5">סינון לפי קטגוריה</Label>
+            <ComboBox x:Name="categorySelector" Grid.ColumnSpan="4" Margin="190,10,232,10" SelectionChanged="categorySelector_SelectionChanged" Text="choose category"/>
+            <Button Content="Add new Product" Grid.Column="3" HorizontalAlignment="Left" Margin="109,5,0,5" Padding="5" x:Name="addNewProduct" Click="addNewProduct_Click"
+                      Height="60" Width="209" FontSize="22" Background="SteelBlue" FontWeight="Bold" Foreground="#FFFBF5F5" BorderBrush="#FFFBF5F5"/>
         </Grid>
-       
+
     </Grid>
 </Window>
